# waf

./: .dockerignore  .env.sample  .gitignore  API.md  CLAUDE.md  README.md  docker-compose.yml  manage.sh
backend/: .dockerignore  .env  .env.sample  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  database.py  dependencies.py  models.py  schemas.py
backend/app/application/dtos/: dtos.py
backend/app/application/services/: auth_service.py  monitoring_service.py  post_service.py
backend/app/domain/models/: enums.py  models.py  security_event.py  waf_config.py
backend/app/domain/repositories/: post_repository.py  security_event_repository.py  user_repository.py  waf_log_repository.py
backend/app/domain/services/: security_analysis_service.py
backend/app/infrastructure/: cache.py  config.py  constants.py  database.py  timezone.py
backend/app/infrastructure/auth/: __init__.py  auth.py
backend/app/infrastructure/repositories/: security_event_repository.py  security_event_repository_optimized.py  sqlalchemy_post_repository.py  sqlalchemy_user_repository.py  sqlalchemy_waf_log_repository.py
backend/app/presentation/: dependencies.py
backend/app/presentation/routers/: analytics.py  auth.py  crs_rules.py  dashboard.py  geoip.py  google_auth.py  monitoring.py  posts.py  rules.py  stats.py  vulnerable.py  waf_config.py  websocket.py
backend/app/routers/: auth.py  logs.py  posts.py  waf_logs.py
backend/app/services/: geoip_service.py
db/: .dockerignore  .env  README.md
db/config/: my.cnf
db/init/: 01_database_init.sql  01_schema.sql  02_core_tables.sql  02_tables.sql  03_data.sql  03_waf_tables.sql  04_config.sql  (+5 more)
frontend/: .dockerignore  .env  .env.example  .env.sample  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
log_processor/: .dockerignore  .gitignore  Dockerfile  attack_detection.py  log_processor.py  pyproject.toml  requirements.txt
nginx/: .dockerignore  .gitignore
(+82 files in other folders)
