[project]
name = "waf-test-backend"
version = "0.1.0"
description = "FastAPI backend for WAF testing"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "pymysql[rsa]",
  "cryptography",
  "pydantic",
  "pydantic[email]",
  "pydantic-settings",
  "python-jose[cryptography]",
  "passlib[bcrypt]",
  "python-multipart",
  "aiofiles",
  "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx", "alembic"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.uv]
# Configuration for uv if needed
