[project]
name = "waf-log-processor"
version = "1.0.0"
description = "WAF Log Processor Service"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.0",
    "pymysql[rsa]>=1.1.0",
    "python-dotenv>=1.0.0",
    "watchdog>=3.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pytz>=2024.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"